# alphadia-search-rs

./: .bumpversion.toml  .pre-commit-config.yaml  Cargo.toml  MEMORY_TESTING.md  QUADRUPOLE_MEMORY_OPTIMIZATION.md  README.md  SIMD_DYNAMIC_DISPATCH_ANALYSIS.md  TEST_MIGRATION_PLAN.md  clippy.toml  pyproject.toml  rust-toolchain.toml
.cursor/rules/: dev_setup.mdc
.github/workflows/: CI.yml  linting.yml  scripts-lint.yml
cli/: score_benchmark.rs
design_documents/: DenseXICObservation_Design.md  performance_optimizations.md  precursor_quantification_design.md  simd_backend.md
scripts/: alpharaw.ipynb  astral_raw_test.sh  benchmark_convolution.py  candidate_scoring.py  candidate_selection.py  debug_lvl1.ipynb  ibrutinib_test.sh  load_raw.py  peak_scoring.py  prepare_raw.py  setup-git-hooks.sh  shap_minimal.py  test_alpha_rs.py  test_search.py
src/: benchmark.rs  candidate.rs  convolution.rs  convolution_test.rs  dia_data.rs  dia_data_builder.rs  integration_tests.rs  kernel.rs  lib.rs  mz_index.rs  peak_group_scoring.rs  precursor.rs  quadrupole_observation.rs  rt_index.rs  score.rs  speclib_flat.rs  traits.rs  xic_index.rs  xic_slice.rs
src/benchmark/: mod.rs  tests.rs
src/candidate/: features.rs  mod.rs  tests.rs
src/convolution/: mod.rs  neon.rs  scalar.rs  tests.rs
src/dense_xic_observation/: mod.rs  tests.rs
src/dia_data/: alpha_raw_view.rs  mod.rs  tests.rs
src/dia_data_builder/: mod.rs  tests.rs
src/dia_data_builder_next_gen/: mod.rs  tests.rs
src/dia_data_next_gen/: mod.rs  tests.rs
src/idf/: mod.rs  tests.rs
src/kernel/: mod.rs  tests.rs
src/mz_index/: mod.rs  tests.rs
src/peak_group_quantification/: mod.rs  parameters.rs  tests.rs  utils.rs
src/peak_group_scoring/: mod.rs  parameters.rs  tests.rs  utils.rs
src/peak_group_selection/: mod.rs  parameters.rs  tests.rs
src/precursor/: mod.rs  tests.rs
src/precursor_quantified/: mod.rs  tests.rs
src/quadrupole_observation/: mod.rs  tests.rs
src/quadrupole_observation_next_gen/: mod.rs  tests.rs
src/rt_index/: mod.rs  tests.rs
src/score/: mod.rs  neon.rs  scalar.rs  tests.rs  tests_neon.rs
src/simd/: mod.rs  neon.rs  scalar.rs  tests.rs
src/speclib_flat/: mod.rs  tests.rs
src/speclib_flat_quantified/: mod.rs  tests.rs
src/svm/: cgls.rs  data.rs  l2_svm_mfn.rs  line_search.rs  mod.rs  tests.rs  utils.rs
src/utils/: mod.rs  tests.rs
src/xic_slice/: mod.rs  tests.rs
tests/: benchmark.rs  convolution.rs  test_alpha_rs.py
