[package]
name = "alpha-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
numpy = "0.23"
rand = "0.8.5"
rayon = "1.8"
num_cpus = "1.16"
ndarray-npy = "0.9.1"

[dev-dependencies]
approx = "0.4.0"
