[package]
name = "alpha-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
numpy = "0.25.0"
rand = "0.9.1"
rayon = "1.10.0"
num_cpus = "1.17.0"
ndarray-npy = "0.9.1"
cpufeatures = "0.2"

[dev-dependencies]
approx = "0.4.0"
serial_test = "3.0"
